# hyprkit

./: CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  pyproject.toml
hyprkit/: config_wizard.py  doctor.py  fresh_config.py  lint.py  lint_lua.py  main.py  monitors.py  result.py  waybar.py
